# phml

./: .coveragerc  .gitignore  .pylintrc  CHANGELOG.md  COMLETED.md  README.md  TODO.md  badges.py  cover.py  make_badges.py  makefile  moph.yaml  pyproject.toml  utils_todo.md  wrapper.py
.github/workflows/: deploy_docs.yml  pytest.yml  static.yml
compare/: exec.py  file_1.txt  file_2.txt
deprecated/core/: compiler.py  print_errors.py
deprecated/types/: config.py
docs/: index.html  phml.html  search.js
docs/phml/: VirtualPython.html  ast.html  builder.html  compiler.html  components.html  core.html  embedded.html  file_types.html  helpers.html  locate.html  misc.html  nodes.html  parser.html  transform.html  travel.html  types.html  utilities.html  utils.html  validate.html  virtual_python.html
example/: __init__.py  example.py  test.py
example/component_example/: README.md  gen.py
example/components/: gen.py
example/conditions/: elif.phml  else.phml  gen.py  if.phml
example/example_1/: example.py
example/example_2/: UNICODE.html  gen.py  unicode.phml
example/flask/: README.md  app.py  debug.phml  error.phml  home.phml
example/for_loop/: gen.py  sample1.html  sample1.phml  unicode.html  unicode.phml
example/output/: out1_as_json.json  out1_as_phml.phml  out2_as_json.json  out2_as_phml.phml  sample.json  sample.pehl
example/phml/: sample1.phml
examples/components/: README.md  run.py
examples/conditions/: README.md  run.py
examples/loops/: README.md  run.py  sample.phml  unicode.phml
examples/markdown/: README.md  run.py
examples/simple/: README.md  run.py  utils.py
pehl/: __main__.py  output.pehl  parser.py  planning.md  sample.pehl
pehl/nodes/: __init__.py  comment.py  doctype.py  element.py  literal.py  node.py  point.py  (+4 more)
phml/: AST.py  __init__.py  __main__.py  ast.py  builder.py  compile.py  components.py  core.py  file_types.py  helpers.py  nodes.py  parser.py  test_file.phml  valid_file_types.py
phml-web/: moph.yml
playground/: ImportObjects.py  cmpt.phml  cmpt2.phml  globals_exposables.py  index.html  index.phml  output.html  pre_tags.py  pv2.py  refactor.py  sample.html  sample.phml  sample_python.txt  test.html  test.py  tokenized_parser.md  tokenized_parser.py  vp.py
sandbox/: Data.phml  Nav.phml  css_selectors.py  error.phml  example.md  index.html  mkdn.py  readme.md  run.py  sample.phml  sample1.phml  test.phml  test.py
scripts/: Typing_To_Fix.txt  compare_files.py  f1.txt  f2.txt  write_output.py
tests/: component.phml  data.py  invalid.phml  sample.html  sample.json  sample.phml  sample.xml  test_builder.py  test_compiler.py  test_component.py  test_core.py  test_embedded.py  test_nodes.py  test_parser.py  test_version.py  test_virtual_python.py
v2/: compile_steps.py  compiler.py  components.py  core.py  design.md  embedded.py  nodes.py  parse.py  parser.py  python_blocks.py  run.py  utils.py
(+401 files in other folders)
