[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phml"
version = "0.2.0"
description = "Python Hypertext Markup Language - Extension of HTML"
readme = "README.md"
license = "MIT"
authors = [
    { name="Tired Fox", email="zboehm104@gmail.com"}
]
classifiers = [

]
requires-python = ">=3.10"
dependencies = [
    "saimll>=0.3.0",
    "defusedxml",
    "markdown"
]

[project.optional-dependencies]
tests = [
    "pytest"
]

[project.urls]
"Homepage" = "https://github.com/Tired-Fox/phml"
"Website" = "https://tired-fox.github.io/phml/"

[project.scripts]

[tool.ruff]
extend-select = [
    'E',
    'F',
    'W',
    "C90",
    "I",
    "N",
    "D",
    "UP",
    "ANN",
    "S",
    "A",
    "B",
    "COM",
    "C4",
    "Q",
    "RET",
    "SIM",
    "TCH",
    "PTH",
    "PLE",
    "RUF"
]
