[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phml"
version = "0.3.1"
description = "Python Hypertext Markup Language - Extension of HTML"
readme = "README.md"
license = "MIT"
authors = [
    { name="Tired Fox", email="zboehm104@gmail.com"}
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
  "saimll>=0.3.0",
]

[project.optional-dependencies]
dev = [
  "black",
  "ruff",
  "requests"
]
tests = [
  "pytest",
  "pytest-cov",
  "coverage"
]
markdown = [
  "markdown",
  "Pygments"
]

[project.urls]
"Homepage" = "https://github.com/Tired-Fox/phml"
"Website" = "https://tired-fox.github.io/phml/"

[project.scripts]

[tool.ruff]
ignore = [
  "ANN101"
]
extend-select = [
    'E',
    'F',
    'W',
    "C90",
    "I",
    "N",
    "UP",
    "ANN",
    "S",
    "A",
    "B",
    "COM",
    "C4",
    "Q",
    "RET",
    "SIM",
    "TCH",
    "PTH",
    "PLE",
    "RUF"
]
